# magnet

./: .buildinfo  .gitignore  LICENSE  MANIFEST.in  README.md  genindex.html  index.html  magnet.data.html  magnet.html  magnet.models.html  magnet.simplecs.html  magnet.simplecs.models.html  magnet.utils.html  main.py  modules.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  search.py  searchindex.js  setup.cfg  setup.sh  virtualenv_warmup.sh
.streamlit/: .stable_random_id  config.toml
Data/: Data_N27_Datasheet_light.json  Data_N27_Sinusoidal_light.json  Data_N27_SymmTrapez_light.json  Data_N27_Triangle_light.json  Data_N49_Datasheet_light.json  Data_N49_Sinusoidal_light.json  Data_N49_SymmTrapez_light.json  Data_N49_Triangle_light.json  Data_N87_Datasheet_light.json  Data_N87_Sinusoidal_light.json  Data_N87_SymmTrapez_light.json  Data_N87_Trapezoidal_light.json  Data_N87_Triangle_light.json
Models/: N27.sd
SimPLECS/: Classes  Classes.py  SimFunctions.py
_sources/: magnet.data.rst.txt  magnet.models.rst.txt  magnet.rst.txt  magnet.simplecs.models.rst.txt  magnet.simplecs.rst.txt  magnet.utils.rst.txt
_static/: documentation_options.js
app/: main.py  ui.py  ui_db.py  ui_faq.py  ui_intro.py  ui_mc.py  ui_predict.py  ui_raw.py  ui_tutorial.py
docs/: Makefile  make.bat
magnet_streamlit/: app.py
magnetchallenge/: README.md
scripts/: convex_hull.py  cron.sh  json_to_h5.py  json_to_h5_datasheet.py  json_to_h5_measurements.py
tests/: test_config.py  test_coreloss.py
tutorial/: Demo_Test.ipynb  README.md  (+2 more)
(+294 files in other folders)
