[metadata]
name = magnet
version = 0.0.2
description = Magnetic Core Loss Modeling using ML
long_description = file: README.md

[options]
python_requires = >=3.7
package_dir=
    =src
packages=find:
include_package_data = True
install_requires =
    numpy
    pandas
    scipy
    torch

[options.packages.find]
where=src

[options.extras_require]
dev = pytest; sphinx; numpydoc; sphinxcontrib-bibtex<2.0.0; sphinx-rtd-theme